[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/mesh_creator/ui/EdgeProperties.gd" type="Script" id=1]

[node name="EdgeProperties" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -297.0
margin_bottom = -571.0
script = ExtResource( 1 )

[node name="Items" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = 267.0
margin_bottom = -99.0

[node name="lbl_EdgeMeshId" type="Label" parent="Items"]
margin_top = 8.0
margin_right = 150.0
margin_bottom = 22.0
text = "Edge Mesh ID: {face_id}"

[node name="lbl_EdgeLength" type="Label" parent="Items"]
margin_left = 154.0
margin_top = 8.0
margin_right = 292.0
margin_bottom = 22.0
text = "Length: {edge_length}"

[node name="lbl_EdgePos" type="Label" parent="Items"]
margin_left = 296.0
margin_top = 8.0
margin_right = 348.0
margin_bottom = 22.0
text = "Position"

[node name="inp_EdgePosX" type="SpinBox" parent="Items"]
margin_left = 352.0
margin_right = 426.0
margin_bottom = 31.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="inp_EdgePosY" type="SpinBox" parent="Items"]
margin_left = 430.0
margin_right = 504.0
margin_bottom = 31.0
step = 0.001
allow_greater = true
allow_lesser = true

[node name="inp_EdgePosZ" type="SpinBox" parent="Items"]
margin_left = 508.0
margin_right = 582.0
margin_bottom = 31.0
step = 0.001
allow_greater = true
allow_lesser = true
